Fix cartItemPreview button issue on mobile

--- a/src/assets/styles/components/entities/cart/_cart-item-preview.scss
+++ b/src/assets/styles/components/entities/cart/_cart-item-preview.scss
@@ -63,7 +63,6 @@
     display: grid;
     grid-template-columns: 36px 1fr 36px;
     gap: 0.25rem;
-    align-items: center;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 0.5rem;
@@ -73,6 +72,7 @@
       max-width: 36px;
     }
     small {
+      max-width: fit-content;
       font-size: 0.9rem;
       color: #333;
       text-align: center;
